fix: card align

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ Proyecto 1er trimestre Lenguaje de Marcas
     margin: 0;
     padding: 0;
     box-sizing: inherit;
-    transition: 0.1s;
+    transition: 0.3s;
 }
 
 /* ********** General ********** */
@@ -234,13 +234,18 @@ h3 {
     padding: 20px;
 }
 #section3 .card {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+
     border: 1px solid var(--grey);
     border-radius: 5px;
     box-shadow: 0px 10px 10px var(--grey);
     padding: 15px;
     margin: 5px 0px;
-    background-color: var(--purple);
-    color:var(--blue2);
+    background-color: var(--blue1);
+    color:var(--purple);
 }
 #section3 .card:hover {
     transform: scale(1.05);
@@ -251,10 +256,13 @@ h3 {
 }
 #section3 .card h3 {
     padding-top: 15px;
-color:var(--orange);
+    color:var(--orange);
 }
 #section3 p {
     padding-bottom: 15px;
+    text-align: center;
+}
+#section3 .cardinfo{
 }
 
 /* ********** Animation ********** */
@@ -294,10 +302,7 @@ color:var(--orange);
     .col2 {
         grid-template-columns: 100%;
     }
-    .foto-container img {
-        width: 80%;
-        border-radius: 5px;
-    }
+
     .col4 {
         grid-template-columns: 50% 50%;
     }
